[package]
name = "task_list"
version = "0.1.0"
authors = ["Denys Davydov d.davydov@ukma.edu.ua"]
edition = "2021"
description = "A Rust-based parser for task lists with priority, status, date, and description fields."


[dependencies]
anyhow = "1.0.93"
clap = "4.5.20"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"
